add kitty-display div

--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
 		<h1>Cat Clickr</h1>
 		<p>Click on the cat and collect cliks!</p>
 	</div>
-	<div id="kitty-display">
+	<div id="kitty-display" class="text-center">
 		<img id="kitty-img" class="center-block" src="">
+		<p id="catName"></p>
+		<p id="clicks"></p>
 	</div>
 
 	<script src="js/libs/jquery-1.12.0.min.js"></script>
